@@ -498,13 +498,13 @@ public class ToolEntryEditPart extends PaletteEditPart {
 	}
 
 	public void restoreState(IMemento memento) {
-		if (new Boolean(memento.getString(ACTIVE_STATE)).booleanValue())
+		if (Boolean.valueOf(memento.getString(ACTIVE_STATE)).booleanValue())
 			getPaletteViewer().setActiveTool(getToolEntry());
 		super.restoreState(memento);
 	}
 
 	public void saveState(IMemento memento) {
-		memento.putString(ACTIVE_STATE, new Boolean(getPaletteViewer()
+		memento.putString(ACTIVE_STATE, Boolean.valueOf(getPaletteViewer()
 				.getActiveTool() == getToolEntry()).toString());
 		super.saveState(memento);
 	}
